examenes/2017Q2 - 2do parcial/Metzker/firewall.conf
# Generated by iptables-save v1.4.21 on Wed Nov 15 21:59:31 2017
*nat
:PREROUTING ACCEPT [3516:364072]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [227:71372]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A POSTROUTING -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
COMMIT
# Completed on Wed Nov 15 21:59:31 2017
# Generated by iptables-save v1.4.21 on Wed Nov 15 21:59:31 2017
*filter
:INPUT DROP [472:52883]
:FORWARD DROP [34:2272]
:OUTPUT DROP [28:9184]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.8/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 10.129.198.76/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 10.129.198.76/32 -d 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed Nov 15 21:59:31 2017
